cutoff fixups

--- a/src/assets/styles/_arrangement.less
+++ b/src/assets/styles/_arrangement.less
@@ -41,8 +41,10 @@
 
 // inner banner height
 @inner-banner-height: 75px;
-@inner-banner-height-mobile: 115px;
+@inner-banner-height-mobile: 50px;
+@inner-banner-height-mobile-small: 85px;
 
 // global banner height
 @global-banner-height: 42px;
-@global-banner-height-mobile: 75px;
+@global-banner-height-mobile: 65px;
+@global-banner-height-mobile-small: 75px;
