--- a/src/modules/forking/components/forking-notification/forking-notification.styles.less
+++ b/src/modules/forking/components/forking-notification/forking-notification.styles.less
@@ -48,6 +48,10 @@
         margin-top: 0.25rem;
       }
     }
+
+    @media @breakpoint-mobile-small {
+      height: @global-banner-height-mobile-small;
+    }
   }
 }
 
